<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/holo_blue_light">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="50dp"
            android:textSize="30dp"
            android:textColor="@android:color/background_light"
            android:textStyle="bold">
    </TextView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="50dp">

        <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColor="@android:color/background_light"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@android:color/background_light"/>
    </LinearLayout>

    <Button
            android:id="@+id/button_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/login"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_marginLeft="50dp"/>

        <TextView
                android:id="@+id/registrasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linkregistrasi"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginLeft="10dp"/>
    </LinearLayout>
</LinearLayout>