<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/firstFragment">
        <fragment
                android:id="@+id/firstFragment"
                android:name="com.almas.batuapps.main.views.LoginFragment"
                android:label="@string/login"
                tools:layout="@layout/login_layout">
            <action
                android:id="@+id/action_to_second_fragment"
                app:destination="@+id/secondFragment"/>
            <action
                    android:id="@+id/action_to_menu_main"
                    app:destination="@id/MenuMain"/>
        </fragment>

        <fragment
                android:id="@+id/secondFragment"
                android:name="com.almas.batuapps.main.views.SignUpFragment"
                android:label="@string/registrasi"
                tools:layout="@layout/signup_layout">
            <action
                    android:id="@+id/action_to_first_fragment"
                    app:destination="@+id/firstFragment"/>
        </fragment>

        <activity
                android:id="@+id/MenuMain"
                android:name="com.almas.batuapps.main.views.MainActivity"
                android:label="@string/app_name"
                tools:layout="@layout/activity_main">
        </activity>

</navigation>